--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="0" />
+            android:gravity="right"
+            android:text="0"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/TextViewResult"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:gravity="right"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <LinearLayout
