--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -230,7 +230,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="—"
+                android:text="-"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
