--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -20,7 +21,15 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="0"
-            android:textSize="30sp" />
+            android:textColor="#DCDCDD"
+            android:padding="5dp"
+            android:textSize="45sp" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/colorSplitLine"/>
 
         <TextView
             android:id="@+id/TextViewResult"
@@ -28,7 +37,9 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="right"
-            android:textSize="30sp" />
+            android:textColor="#DCDCDD"
+            android:padding="5dp"
+            android:textSize="45sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,7 +66,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="C"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -64,7 +75,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="DEL"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -73,7 +84,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="±"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
             </TableRow>
 
@@ -88,7 +99,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="1"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -97,7 +108,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="2"
-                    android:textSize="24sp" />
+                    style="@style/BtnStyle"
+                    android:typeface="normal" />
 
                 <Button
                     android:id="@+id/ButtonNum3"
@@ -105,7 +117,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="3"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
             </TableRow>
 
@@ -120,7 +132,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="4"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -129,7 +141,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="5"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -138,7 +150,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="6"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
             </TableRow>
 
@@ -153,7 +165,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="7"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -162,7 +174,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="8"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
 
                 <Button
@@ -171,7 +183,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="9"
-                    android:textSize="24sp"
+                    style="@style/BtnStyle"
                     android:typeface="normal" />
             </TableRow>
 
@@ -186,7 +198,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:text="0"
-                    android:textSize="24sp" />
+                    style="@style/BtnStyle"
+                    android:typeface="normal" />
 
                 <Button
                     android:id="@+id/ButtonPoint"
@@ -194,7 +207,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="."
-                    android:textSize="24sp" />
+                    style="@style/BtnStyle"
+                    android:typeface="normal" />
             </TableRow>
 
         </TableLayout>
@@ -211,7 +225,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="÷"
-                android:textSize="24sp"
+                style="@style/SymbolBtnStyle"
                 android:textStyle="bold"
                 android:typeface="normal" />
 
@@ -221,7 +235,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="×"
-                android:textSize="24sp"
+                style="@style/SymbolBtnStyle"
                 android:textStyle="bold"
                 android:typeface="normal" />
 
@@ -231,7 +245,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="-"
-                android:textSize="24sp"
+                style="@style/SymbolBtnStyle"
                 android:textStyle="bold"
                 android:typeface="normal" />
 
@@ -241,7 +255,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="+"
-                android:textSize="24sp"
+                style="@style/SymbolBtnStyle"
                 android:textStyle="bold"
                 android:typeface="normal" />
 
@@ -251,7 +265,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="="
-                android:textSize="24sp"
+                style="@style/SymbolBtnStyle"
                 android:textStyle="bold"
                 android:typeface="normal" />
         </LinearLayout>
@@ -261,17 +275,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.26"
+        android:layout_weight="0.24"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/ButtonShowHistory"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="1dp"
             android:layout_weight="1"
+            android:background="@color/colorBtnNormal"
             android:text="显示历史记录"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:textColor="#B0B1B7"
+            android:textSize="25sp"
             android:typeface="normal" />
     </LinearLayout>
 </LinearLayout>
