--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BtnStyle">
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">@color/colorBtnText</item>
+        <item name="android:background">@drawable/btn_selector</item>
+    </style>
+
+    <style name="SymbolBtnStyle">
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">@color/colorBtnText</item>
+        <item name="android:background">@drawable/symbol_btn_selector</item>
+    </style>
 </resources>
