--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -5,22 +5,25 @@
 
     <TextView
         android:id="@+id/TextViewHisItemIndex"
-        android:layout_width="wrap_content"
+        style="@style/TextViewStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        android:text="TextView" />
+        android:text="Text" />
 
     <TextView
         android:id="@+id/TextVIewHisItemFormula"
-        android:layout_width="wrap_content"
+        style="@style/TextViewStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/TextViewHisItemResult"
-        android:layout_width="wrap_content"
+        style="@style/TextViewStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="0.7"
         android:text="TextView" />
 </LinearLayout>
